# ChangeLog for app-emulation/emul-linux-x86-motif
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-motif/ChangeLog,v 1.19 2013/03/16 15:21:57 pacho Exp $

  16 Mar 2013; Pacho Ramos <pacho@gentoo.org>
  emul-linux-x86-motif-20130224.ebuild:
  amd64 stable, bug #461674

  15 Mar 2013; Ulrich Müller <ulm@gentoo.org>
  emul-linux-x86-motif-20121202.ebuild, emul-linux-x86-motif-20130224.ebuild:
  Add blocker against multilib-enabled motif.

  27 Feb 2013; Pacho Ramos <pacho@gentoo.org>
  -emul-linux-x86-motif-20121028.ebuild:
  Drop old

*emul-linux-x86-motif-20130224 (25 Feb 2013)

  25 Feb 2013; Pacho Ramos <pacho@gentoo.org>
  +emul-linux-x86-motif-20130224.ebuild:
  Version bump, drop old

  25 Dec 2012; Pacho Ramos <pacho@gentoo.org>
  emul-linux-x86-motif-20121202.ebuild:
  amd64 stable, bug #447506

  15 Dec 2012; Pacho Ramos <pacho@gentoo.org>
  emul-linux-x86-motif-20121202.ebuild:
  Add missing LGPL2+ license, bug #447300 by Ulrich Müller

*emul-linux-x86-motif-20121202 (02 Dec 2012)

  02 Dec 2012; Pacho Ramos <pacho@gentoo.org>
  +emul-linux-x86-motif-20121202.ebuild, -emul-linux-x86-motif-20120520.ebuild:
  Version bump, drop old.

  25 Nov 2012; Pacho Ramos <pacho@gentoo.org>
  emul-linux-x86-motif-20121028.ebuild:
  amd64 stable, bug #442436

*emul-linux-x86-motif-20121028 (28 Oct 2012)

  28 Oct 2012; Pacho Ramos <pacho@gentoo.org>
  +emul-linux-x86-motif-20121028.ebuild, -emul-linux-x86-motif-20120127.ebuild:
  Version bump, drop old.

  25 Jul 2012; Pacho Ramos <pacho@gentoo.org>
  emul-linux-x86-motif-20120520.ebuild:
  amd64 stable, bug #427444

*emul-linux-x86-motif-20120520 (20 May 2012)

  20 May 2012; Pacho Ramos <pacho@gentoo.org>
  +emul-linux-x86-motif-20120520.ebuild, -emul-linux-x86-motif-20110928.ebuild:
  Version bump, drop old.

  09 Mar 2012; Samuli Suominen <ssuominen@gentoo.org>
  emul-linux-x86-motif-20120127.ebuild:
  amd64 stable wrt #405779
