@@ -1,6 +1,12 @@
 # ChangeLog for app-emulation/emul-linux-x86-motif
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-motif/ChangeLog,v 1.19 2013/03/16 15:21:57 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-motif/ChangeLog,v 1.20 2013/07/31 14:02:45 ulm Exp $
+
+*emul-linux-x86-motif-20130224-r1 (31 Jul 2013)
+
+  31 Jul 2013; Ulrich Müller <ulm@gentoo.org>
+  +emul-linux-x86-motif-20130224-r1.ebuild:
+  Convert to metapackage with USE=abi_x86_32, bug 461916.
 
   16 Mar 2013; Pacho Ramos <pacho@gentoo.org>
   emul-linux-x86-motif-20130224.ebuild:
